// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@modernpoacher/cogs/components/field/select <Field /> With additional props renders 1`] = `
<select
  className="MOCK CLASSNAME"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  readOnly={true}
  required={true}
/>
`;

exports[`@modernpoacher/cogs/components/field/select <Field /> With required props renders 1`] = `
<select
  className="MOCK CLASSNAME"
  name="MOCK NAME"
/>
`;
